--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.12.1",
     "eslint-config-next": "11.0.0",
     "eslint-config-prettier": "^8.3.0",
