Add: Http provider

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "next": "11.0.0",
     "react": "17.0.2",
