--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.14",
+    "@trpc/client": "^10.30.0",
+    "@trpc/next": "^10.30.0",
+    "@trpc/react": "^9.27.4",
+    "@trpc/react-query": "^10.30.0",
+    "@trpc/server": "^10.30.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "superjson": "^1.12.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
