--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@trpc/react": "^9.27.4",
     "@trpc/react-query": "^10.30.0",
     "@trpc/server": "^10.30.0",
+    "@typescript-eslint/parser": "^5.59.11",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
-    "next": "11.0.0",
+    "next": "12.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0",
@@ -26,20 +27,22 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
+    "@types/node": "20.3.1",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.12.1",
-    "eslint-config-next": "11.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.6",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.24.0",
-    "prettier": "^2.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8",
     "typescript": "5.1.3"
   }
 }
