--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "recoil": "^0.7.7",
+    "recoil-sync": "^0.2.0",
     "styled-components": "^5.3.0",
     "superjson": "^1.12.3",
     "zod": "^3.21.4"
