--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@tanstack/react-query": "^4.29.14",
     "@trpc/client": "^10.30.0",
     "@trpc/next": "^10.30.0",
