--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.10.1",
     "recoil": "^0.7.7",
     "recoil-sync": "^0.2.0",
     "recoil-sync-next": "^0.0.5",
