--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-query": "^4.29.14",
     "@trpc/client": "^10.30.0",
     "@trpc/next": "^10.30.0",
