--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@trpc/react": "^9.27.4",
     "@trpc/react-query": "^10.30.0",
     "@trpc/server": "^10.30.0",
-    "@typescript-eslint/parser": "^5.59.11",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "next": "12.3",
@@ -35,23 +34,21 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.32.0",
     "@types/lodash": "^4.14.170",
     "@types/node": "20.3.1",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.6",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8",
-    "typescript": "5.1.3"
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "prettier": "^3.6.2",
+    "typescript": "5.1.3",
+    "typescript-eslint": "^8.39.0"
   }
 }
