chore: configured import order

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "eslint.config.mts"
   ],
   "exclude": [
     "node_modules"
