--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
