--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@types/styled-components": "^5.1.10",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.5",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
     "prettier": "^3.6.2",
