--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next lint --fix && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --fix"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -21,15 +21,15 @@
     "@trpc/server": "^10.30.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
-    "next": "12.3",
+    "next": "13",
     "polished": "^4.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^4.10.1",
     "recoil": "^0.7.7",
     "recoil-sync": "^0.2.0",
     "recoil-sync-next": "^0.0.5",
-    "styled-components": "^5.3.0",
+    "styled-components": "^6.1.11",
     "superjson": "^1.12.3",
     "zod": "^3.21.4"
   },
@@ -38,14 +38,16 @@
     "@eslint/js": "^9.32.0",
     "@types/lodash": "^4.14.170",
     "@types/node": "20.3.1",
-    "@types/react": "17.0.11",
-    "@types/styled-components": "^5.1.10",
+    "@types/react": "^19.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.21.3",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
