--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@trpc/server": "^10.30.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
-    "next": "13",
+    "next": "^14.2.31",
     "polished": "^4.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
