--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^4.29.14",
     "@trpc/client": "^10.30.0",
     "@trpc/next": "^10.30.0",
@@ -23,6 +24,7 @@
     "lodash": "^4.17.21",
     "next": "^14.2.31",
     "polished": "^4.2.2",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^4.10.1",
@@ -31,6 +33,7 @@
     "recoil-sync-next": "^0.0.5",
     "styled-components": "^6.1.11",
     "superjson": "^1.12.3",
+    "tailwindcss": "^4.1.11",
     "zod": "^3.21.4"
   },
   "devDependencies": {
