--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,7 +51,8 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "eslint.config.mts"
+    "eslint.config.mts",
+    "postcss.config.mjs"
   ],
   "exclude": [
     "node_modules"
