--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "^10.30.0",
     "@trpc/server": "^10.30.0",
     "axios": "^0.21.1",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "^14.2.31",
     "polished": "^4.2.2",
@@ -33,6 +34,7 @@
     "recoil-sync-next": "^0.0.5",
     "styled-components": "^6.1.11",
     "superjson": "^1.12.3",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^3.21.4"
   },
