--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       "@/config/*": ["./src/config/*"],
       "@/modules/*": ["./src/modules/*"],
       "@/domain/*": ["./src/domain/*"],
+      "@/infra/*": ["./src/infra/*"],
       "@/presentation/*": ["./src/presentation/*"],
-      "@/shared/*": ["./src/shared/*"],
-      "@api/*": ["./src/modules/api/presentation/*"]
+      "@/shared/*": ["./src/shared/*"]
     },
     "typeRoots": ["node_modules/@types", "./src/@types"],
     "incremental": true,
