--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tailwindcss/postcss": "^4.1.11",
-    "@tanstack/react-query": "^4.29.14",
-    "@trpc/client": "^10.30.0",
+    "@tanstack/react-query": "^5.84.1",
+    "@trpc/client": "^11.4.4",
     "@trpc/next": "^10.30.0",
     "@trpc/react": "^9.27.4",
     "@trpc/react-query": "^10.30.0",
-    "@trpc/server": "^10.30.0",
+    "@trpc/server": "^11.4.4",
+    "@trpc/tanstack-react-query": "^11.4.4",
     "axios": "^0.21.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "^14.2.31",
@@ -32,6 +34,7 @@
     "recoil": "^0.7.7",
     "recoil-sync": "^0.2.0",
     "recoil-sync-next": "^0.0.5",
+    "server-only": "^0.0.1",
     "styled-components": "^6.1.11",
     "superjson": "^1.12.3",
     "tailwind-merge": "^3.3.1",
